src/gc-arena/tests/ui/bad_collect_bound.stderr
error[E0277]: the trait bound `NotCollect: Collect` is not satisfied
 --> $DIR/bad_collect_bound.rs:8:5
  |
5 | #[derive(Collect)]
  |          ------- in this derive macro expansion
...
8 |     field: NotCollect
  |     ^^^^^ the trait `Collect` is not implemented for `NotCollect`
  |
  = help: the following other types implement trait `Collect`:
            &'a T
            &'a mut T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
          and 47 others
  = note: this error originates in the derive macro `Collect` (in Nightly builds, run with -Z macro-backtrace for more info)
